updated mac requirements

--- a/requirements_mac.txt
+++ b/requirements_mac.txt
@@ -2,7 +2,7 @@ jupyter
 particle
 tensorflow-macos
 tensorflow-metal
-tensorflow-probability[tf]
+tensorflow-probability[tf]==0.24.0
 scipy
 matplotlib
 numpy
